AC_PREREQ([2.69])
AC_INIT(helloworld, helloworld, oehrstroem@gmail.com,,https://github.com/weetmuts/NodeExperiments)
AC_CONFIG_AUX_DIR([make/autoconf])

m4_include([make/autoconf/setup_common.m4])
m4_include([make/autoconf/setup_nodejs.m4])
m4_include([make/autoconf/setup_typescript.m4])

# Write out spec.gmk and build/Makefile
AC_OUTPUT
